# SurfGenTorch

./: .gitignore  CMakeLists-gnu.txt  CMakeLists.txt  Cpp-Library  Hd_input_layer.py  README.md  example.md  input_layer.py
Cpp-Library_v1.0.0/: CMakeLists.txt  README.md  README_argparse.md  argparse.hpp  argparse.md  general.hpp  gnu_CMakeLists.txt  torch_LinearAlgebra.hpp
Cpp-Library_v1.0.0/CppLibrary/: TorchSupport.hpp  chemistry.hpp  utility.hpp
Cpp-Library_v1.0.0/source/: LinearAlgebra.cpp  TorchSupport.cpp  general.cpp  torch_LinearAlgebra.cpp  utility.cpp
Cpp-Library_v1.0.0/source/TorchSupport/: InternalCoordinate.cpp  LinearAlgebra.cpp  chemistry.cpp  utility.cpp
cpp/: CMakeLists.txt
cpp/Cpp-Library_v1.0.0/: CMakeLists.txt  LinearAlgebra.hpp  TorchSupport.hpp  chemistry.hpp  torch.hpp  torch_LinearAlgebra.hpp
cpp/Cpp-Library_v1.0.0/source/: LinearAlgebra.cpp  TorchSupport.cpp  general.cpp  torch.cpp  torch_LinearAlgebra.cpp
cpp/include/: AbInitio.hpp  net.hpp  pretrain.hpp
cpp/source/: AbInitio.cpp  SSAIC.cpp  main.cpp  pretrain.cpp  utility.cpp
cpp/source/net/: DimRed.cpp  FLopt.cpp  RMSD.cpp  pretrain.cpp
critic/: CMakeLists.txt  basic.cpp  main.cpp  mex.cpp  min.cpp  sad.cpp
data-view/: CMakeLists.txt  main.cpp
debug/: CMakeLists.txt  Cpp-Library_v1.0.0  main.cpp
example/: DimRed.in  DimRed.in_train  Hd.in  Hd.in_train  IntCoordDef  SSAIC.in  origin.xyz
include/: AbInitio.hpp  DimRed.hpp  Hd.hpp  SSAIC.hpp  net.hpp  observable_net.hpp  utility.hpp
libSGT/: CMakeLists.txt  libSGT.cpp  libSGT.hpp
python/: AbInitio.py  DimRed.py  SSAIC.py  SurfGenTorch.py  pretrain.py  symmetry.py  utility.py
python/PythonLibrary/: LinearAlgebra.py  io.py  utility.py
source/: AbInitio.cpp  DimRed.cpp  FLopt.cpp  Hd.cpp  Main.cpp  SSAIC.cpp  main.cpp  observable_net.cpp  pretrain.cpp  train.cpp  train_DimRed.cpp  train_Hd.cpp  utility.cpp
tools/critic/: CMakeLists.txt  Cpp-Library  README.md  basic.cpp  basic.hpp  libSGT  main.cpp  mex.cpp  min.cpp  sad.cpp
tools/data-view/: CMakeLists.txt  Cpp-Library_v1.0.0  main.cpp
tools/libSGT/: CMakeLists.txt  README.md  libSGT.cpp  libSGT.hpp
